src/parse/msgennyparser.js
// @generated by Peggy 5.1.0.
//
// https://peggyjs.org/
(function(root, factory) {
  if (typeof define === "function" && define.amd) {
    define(["./parserHelpers"], factory);
  } else if (typeof module === "object" && module.exports) {
    module.exports = factory(require("./parserHelpers"));
  }
})(this, function(parserHelpers) {
  "use strict";
class peg$SyntaxError extends SyntaxError {
  constructor(message, expected, found, location) {
    super(message);
    this.expected = expected;
    this.found = found;
    this.location = location;
    this.name = "SyntaxError";
  }

  format(sources) {
    let str = "Error: " + this.message;
    if (this.location) {
      let src = null;
      const st = sources.find(s => s.source === this.location.source);
      if (st) {
        src = st.text.split(/\r\n|\n|\r/g);
      }
      const s = this.location.start;
      const offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
        ? this.location.source.offset(s)
        : s;
      const loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
      if (src) {
        const e = this.location.end;
        const filler = "".padEnd(offset_s.line.toString().length, " ");
        const line = src[s.line - 1];
        const last = s.line === e.line ? e.column : line.length + 1;
        const hatLen = (last - s.column) || 1;
        str += "\n --> " + loc + "\n"
            + filler + " |\n"
            + offset_s.line + " | " + line + "\n"
            + filler + " | " + "".padEnd(s.column - 1, " ")
            + "".padEnd(hatLen, "^");
      } else {
        str += "\n at " + loc;
      }
    }
    return str;
  }

  static buildMessage(expected, found) {
    function hex(ch) {
      return ch.codePointAt(0).toString(16).toUpperCase();
    }

    const nonPrintable = Object.prototype.hasOwnProperty.call(RegExp.prototype, "unicode")
      ? new RegExp("[\\p{C}\\p{Mn}\\p{Mc}]", "gu")
      : null;
    function unicodeEscape(s) {
      if (nonPrintable) {
        return s.replace(nonPrintable,  ch => "\\u{" + hex(ch) + "}");
      }
      return s;
    }

    function literalEscape(s) {
      return unicodeEscape(s
        .replace(/\\/g, "\\\\")
        .replace(/"/g,  "\\\"")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          ch => "\\x0" + hex(ch))
        .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => "\\x"  + hex(ch)));
    }

    function classEscape(s) {
      return unicodeEscape(s
        .replace(/\\/g, "\\\\")
        .replace(/\]/g, "\\]")
        .replace(/\^/g, "\\^")
        .replace(/-/g,  "\\-")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          ch => "\\x0" + hex(ch))
        .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => "\\x"  + hex(ch)));
    }

    const DESCRIBE_EXPECTATION_FNS = {
      literal(expectation) {
        return "\"" + literalEscape(expectation.text) + "\"";
      },

      class(expectation) {
        const escapedParts = expectation.parts.map(
          part => (Array.isArray(part)
            ? classEscape(part[0]) + "-" + classEscape(part[1])
            : classEscape(part))
        );

        return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]" + (expectation.unicode ? "u" : "");
      },

      any() {
        return "any character";
      },

      end() {
        return "end of input";
      },

      other(expectation) {
        return expectation.description;
      },
    };

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      const descriptions = expected.map(describeExpectation);
      descriptions.sort();

      if (descriptions.length > 0) {
        let j = 1;
        for (let i = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found) {
      return found ? "\"" + literalEscape(found) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  }
}

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  const peg$FAILED = {};
  const peg$source = options.grammarSource;

  const peg$startRuleFunctions = {
    program: peg$parseprogram,
  };
  let peg$startRuleFunction = peg$parseprogram;

  const peg$c0 = ",";
  const peg$c1 = ";";
  const peg$c2 = "hscale";
  const peg$c3 = "arcgradient";
  const peg$c4 = "=";
  const peg$c5 = "width";
  const peg$c6 = "wordwraparcs";
  const peg$c7 = "wordwrapentities";
  const peg$c8 = "wordwrapboxes";
  const peg$c9 = "watermark";
  const peg$c10 = ":";
  const peg$c11 = "*";
  const peg$c12 = "{";
  const peg$c13 = "}";
  const peg$c14 = "|||";
  const peg$c15 = "...";
  const peg$c16 = "---";
  const peg$c17 = "--";
  const peg$c18 = "<->";
  const peg$c19 = "==";
  const peg$c20 = "<<=>>";
  const peg$c21 = "<=>";
  const peg$c22 = "..";
  const peg$c23 = "<<>>";
  const peg$c24 = "::";
  const peg$c25 = "<:>";
  const peg$c26 = "->";
  const peg$c27 = "=>>";
  const peg$c28 = "=>";
  const peg$c29 = ">>";
  const peg$c30 = ":>";
  const peg$c31 = "-x";
  const peg$c32 = "<-";
  const peg$c33 = "<<=";
  const peg$c34 = "<=";
  const peg$c35 = "<<";
  const peg$c36 = "<:";
  const peg$c37 = "x-";
  const peg$c38 = "note";
  const peg$c39 = "abox";
  const peg$c40 = "rbox";
  const peg$c41 = "box";
  const peg$c42 = "alt";
  const peg$c43 = "else";
  const peg$c44 = "opt";
  const peg$c45 = "break";
  const peg$c46 = "par";
  const peg$c47 = "seq";
  const peg$c48 = "strict";
  const peg$c49 = "neg";
  const peg$c50 = "critical";
  const peg$c51 = "ignore";
  const peg$c52 = "consider";
  const peg$c53 = "assert";
  const peg$c54 = "loop";
  const peg$c55 = "ref";
  const peg$c56 = "exc";
  const peg$c57 = "\"";
  const peg$c58 = "\\\"";
  const peg$c59 = "/*";
  const peg$c60 = "*/";
  const peg$c61 = "//";
  const peg$c62 = "#";
  const peg$c63 = ".";
  const peg$c64 = "true";
  const peg$c65 = "false";
  const peg$c66 = "on";
  const peg$c67 = "off";
  const peg$c68 = "auto";

  const peg$r0 = /^[,;{]/;
  const peg$r1 = /^[^;, "\t\n\r=\-><:{*]/;
  const peg$r2 = /^[ \t]/;
  const peg$r3 = /^[\r\n]/;
  const peg$r4 = /^[^\r\n]/;
  const peg$r5 = /^[0-9]/;
  const peg$r6 = /^[0-1]/;

  const peg$e0 = peg$literalExpectation(",", false);
  const peg$e1 = peg$literalExpectation(";", false);
  const peg$e2 = peg$literalExpectation("hscale", true);
  const peg$e3 = peg$literalExpectation("arcgradient", true);
  const peg$e4 = peg$literalExpectation("=", false);
  const peg$e5 = peg$literalExpectation("width", true);
  const peg$e6 = peg$literalExpectation("wordwraparcs", true);
  const peg$e7 = peg$literalExpectation("wordwrapentities", true);
  const peg$e8 = peg$literalExpectation("wordwrapboxes", true);
  const peg$e9 = peg$literalExpectation("watermark", true);
  const peg$e10 = peg$otherExpectation("entity");
  const peg$e11 = peg$literalExpectation(":", false);
  const peg$e12 = peg$literalExpectation("*", false);
  const peg$e13 = peg$literalExpectation("{", false);
  const peg$e14 = peg$literalExpectation("}", false);
  const peg$e15 = peg$otherExpectation("empty row");
  const peg$e16 = peg$literalExpectation("|||", false);
  const peg$e17 = peg$literalExpectation("...", false);
  const peg$e18 = peg$otherExpectation("---");
  const peg$e19 = peg$literalExpectation("---", false);
  const peg$e20 = peg$otherExpectation("bi-directional arrow");
  const peg$e21 = peg$literalExpectation("--", false);
  const peg$e22 = peg$literalExpectation("<->", false);
  const peg$e23 = peg$literalExpectation("==", false);
  const peg$e24 = peg$literalExpectation("<<=>>", false);
  const peg$e25 = peg$literalExpectation("<=>", false);
  const peg$e26 = peg$literalExpectation("..", false);
  const peg$e27 = peg$literalExpectation("<<>>", false);
  const peg$e28 = peg$literalExpectation("::", false);
  const peg$e29 = peg$literalExpectation("<:>", false);
  const peg$e30 = peg$otherExpectation("left to right arrow");
  const peg$e31 = peg$literalExpectation("->", false);
  const peg$e32 = peg$literalExpectation("=>>", false);
  const peg$e33 = peg$literalExpectation("=>", false);
  const peg$e34 = peg$literalExpectation(">>", false);
  const peg$e35 = peg$literalExpectation(":>", false);
  const peg$e36 = peg$literalExpectation("-x", true);
  const peg$e37 = peg$otherExpectation("right to left arrow");
  const peg$e38 = peg$literalExpectation("<-", false);
  const peg$e39 = peg$literalExpectation("<<=", false);
  const peg$e40 = peg$literalExpectation("<=", false);
  const peg$e41 = peg$literalExpectation("<<", false);
  const peg$e42 = peg$literalExpectation("<:", false);
  const peg$e43 = peg$literalExpectation("x-", true);
  const peg$e44 = peg$otherExpectation("box");
  const peg$e45 = peg$literalExpectation("note", true);
  const peg$e46 = peg$literalExpectation("abox", true);
  const peg$e47 = peg$literalExpectation("rbox", true);
  const peg$e48 = peg$literalExpectation("box", true);
  const peg$e49 = peg$otherExpectation("inline expression");
  const peg$e50 = peg$literalExpectation("alt", true);
  const peg$e51 = peg$literalExpectation("else", true);
  const peg$e52 = peg$literalExpectation("opt", true);
  const peg$e53 = peg$literalExpectation("break", true);
  const peg$e54 = peg$literalExpectation("par", true);
  const peg$e55 = peg$literalExpectation("seq", true);
  const peg$e56 = peg$literalExpectation("strict", true);
  const peg$e57 = peg$literalExpectation("neg", true);
  const peg$e58 = peg$literalExpectation("critical", true);
  const peg$e59 = peg$literalExpectation("ignore", true);
  const peg$e60 = peg$literalExpectation("consider", true);
  const peg$e61 = peg$literalExpectation("assert", true);
  const peg$e62 = peg$literalExpectation("loop", true);
  const peg$e63 = peg$literalExpectation("ref", true);
  const peg$e64 = peg$literalExpectation("exc", true);
  const peg$e65 = peg$otherExpectation("double quoted string");
  const peg$e66 = peg$literalExpectation("\"", false);
  const peg$e67 = peg$literalExpectation("\\\"", false);
  const peg$e68 = peg$anyExpectation();
  const peg$e69 = peg$classExpectation([",", ";", "{"], false, false, false);
  const peg$e70 = peg$otherExpectation("identifier");
  const peg$e71 = peg$classExpectation([";", ",", " ", "\"", "\t", "\n", "\r", "=", "-", ">", "<", ":", "{", "*"], true, false, false);
  const peg$e72 = peg$otherExpectation("whitespace");
  const peg$e73 = peg$classExpectation([" ", "\t"], false, false, false);
  const peg$e74 = peg$otherExpectation("lineend");
  const peg$e75 = peg$classExpectation(["\r", "\n"], false, false, false);
  const peg$e76 = peg$literalExpectation("/*", false);
  const peg$e77 = peg$literalExpectation("*/", false);
  const peg$e78 = peg$literalExpectation("//", false);
  const peg$e79 = peg$literalExpectation("#", false);
  const peg$e80 = peg$classExpectation(["\r", "\n"], true, false, false);
  const peg$e81 = peg$otherExpectation("comment");
  const peg$e82 = peg$otherExpectation("number");
  const peg$e83 = peg$classExpectation([["0", "9"]], false, false, false);
  const peg$e84 = peg$literalExpectation(".", false);
  const peg$e85 = peg$otherExpectation("boolean");
  const peg$e86 = peg$literalExpectation("true", true);
  const peg$e87 = peg$literalExpectation("false", true);
  const peg$e88 = peg$literalExpectation("on", true);
  const peg$e89 = peg$literalExpectation("off", true);
  const peg$e90 = peg$classExpectation([["0", "1"]], false, false, false);
  const peg$e91 = peg$otherExpectation("size");
  const peg$e92 = peg$literalExpectation("auto", true);

  function peg$f0(pre, declarations) {
    declarations.entities = extractUndeclaredEntities(declarations.entities || [], declarations.arcs);
    declarations = {
        meta: parserHelpers.getMetaInfo(declarations.options, declarations.arcs),
        ...declarations
    };

    if (pre.length > 0) {
        declarations = {precomment: pre, ...declarations};
    }
    return declarations;
  }
  function peg$f1(options, entities, arcs) {
    var lDeclarationList = {};
    if (options) {
        lDeclarationList.options = options;
    }
    if (entities) {
        lDeclarationList.entities = entities;
    }
    if (arcs) {
        lDeclarationList.arcs = arcs;
    }
    return lDeclarationList;
  }
  function peg$f2(o) {return o  }
  function peg$f3(o) {return o  }
  function peg$f4(options) {
    // make the option array into an options object
    return options[0]
        .concat(options[1])
        .reduce((pAll, pCurrent) => Object.assign(pAll, pCurrent), {});
  }
  function peg$f5(name, value) {
    return parserHelpers.nameValue2Option(name, value);
  }
  function peg$f6(name, value) {
    return parserHelpers.nameValue2Option(name, value);
  }
  function peg$f7(name, value) {
    return parserHelpers.nameValue2Option(name, parserHelpers.flattenBoolean(value));
  }
  function peg$f8(name, value) {
    return parserHelpers.nameValue2Option(name, parserHelpers.flattenBoolean(value));
  }
  function peg$f9(name, value) {
    return parserHelpers.nameValue2Option(name, parserHelpers.flattenBoolean(value));
  }
  function peg$f10(name, value) {
    return parserHelpers.nameValue2Option(name, value);
  }
  function peg$f11(e) {return e  }
  function peg$f12(e) {return e  }
  function peg$f13(el) {
    return el[0].concat(el[1]);
  }
  function peg$f14(name, l) {return l  }
  function peg$f15(name, label) {
    var lEntity = initEntity(name);
    if (!!label) {
      lEntity.label = label;
    }
    return lEntity;
  }
  function peg$f16(a) {return a  }
  function peg$f17(a) {return a  }
  function peg$f18(a) {return a  }
  function peg$f19(al) {
    return al[0].concat(al[1]);
  }
  function peg$f20(sa) {return sa  }
  function peg$f21(da) {return da  }
  function peg$f22(ca) {return ca  }
  function peg$f23(ra, s) {return s  }
  function peg$f24(ra, label) {
    if (label) {
      ra.label = label;
    }
    return ra;
  }
  function peg$f25(kind) {return {kind:kind}  }
  function peg$f26(kind) {return {kind:kind}  }
  function peg$f27(from, kind, to) {return {kind: kind, from:from, to:to}  }
  function peg$f28(kind, to) {return {kind:kind, from: "*", to:to}  }
  function peg$f29(from, kind) {return {kind:kind, from: from, to: "*"}  }
  function peg$f30(from, kind) {return {kind:kind, from: from, to: "*"}  }
  function peg$f31(from, kind, to, s) {return s  }
  function peg$f32(from, kind, to, label, arcs) {
    var retval = {
        kind : kind,
        from : from,
        to   : to,
        arcs : arcs
    };
    if (label) {
        retval.label = label;
    }
    return retval;
  }
  function peg$f33(kind) {
    return kind.toLowerCase();
  }
  function peg$f34(kind) {
    return kind.toLowerCase()
  }
  function peg$f35(s) {return s.join("")  }
  function peg$f36(c) {return c  }
  function peg$f37(s) {return s.join("").trim()  }
  function peg$f38(c) {return c  }
  function peg$f39(letters) {return letters.join("")  }
  function peg$f40(c) {return c  }
  function peg$f41(c) {return c  }
  function peg$f42(c) {return c  }
  function peg$f43(start, com, end) {
    return start + com.join("") + end
  }
  function peg$f44(start, com) {
    return start + com.join("")
  }
  function peg$f45(s) {    return s;  }
  function peg$f46(i) {    return i.toString();  }
  function peg$f47(s) {    return s.toString();  }
  function peg$f48(digits) {    return parseInt(digits.join(""), 10);  }
  function peg$f49(digits) {    return parseFloat(digits.join(""));  }
  function peg$f50(bs) {return bs;  }
  function peg$f51(b) {return b.toString();  }
  function peg$f52(s) {    return s;  }
  function peg$f53(s) {    return s;  }
  function peg$f54(n) {return n.toString();  }
  function peg$f55(s) {return s.toLowerCase();  }
  let peg$currPos = options.peg$currPos | 0;
  let peg$savedPos = peg$currPos;
  const peg$posDetailsCache = [{ line: 1, column: 1 }];
  let peg$maxFailPos = peg$currPos;
  let peg$maxFailExpected = options.peg$maxFailExpected || [];
  let peg$silentFails = options.peg$silentFails | 0;

  let peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos,
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$getUnicode(pos = peg$currPos) {
    const cp = input.codePointAt(pos);
    if (cp === undefined) {
      return "";
    }
    return String.fromCodePoint(cp);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text, ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase, unicode) {
    return { type: "class", parts, inverted, ignoreCase, unicode };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description };
  }

  function peg$computePosDetails(pos) {
    let details = peg$posDetailsCache[pos];
    let p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column,
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    const startPosDetails = peg$computePosDetails(startPos);
    const endPosDetails = peg$computePosDetails(endPos);

    const res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column,
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column,
      },
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseprogram() {
    let s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parse_();
    s2 = peg$parsedeclarationlist();
    s3 = peg$parse_();
    peg$savedPos = s0;
    s0 = peg$f0(s1, s2);

    return s0;
  }

  function peg$parsedeclarationlist() {
    let s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parseoptionlist();
    if (s1 === peg$FAILED) {
      s1 = null;
    }
    s2 = peg$parseentitylist();
    if (s2 === peg$FAILED) {
      s2 = null;
    }
    s3 = peg$parsearclist();
    if (s3 === peg$FAILED) {
      s3 = null;
    }
    peg$savedPos = s0;
    s0 = peg$f1(s1, s2, s3);

    return s0;
  }

  function peg$parseoptionlist() {
    let s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$currPos;
    s2 = [];
    s3 = peg$currPos;
    s4 = peg$parseoption();
    if (s4 !== peg$FAILED) {
      if (input.charCodeAt(peg$currPos) === 44) {
        s5 = peg$c0;
        peg$currPos++;
      } else {
        s5 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e0); }
      }
      if (s5 !== peg$FAILED) {
        peg$savedPos = s3;
        s3 = peg$f2(s4);
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
    } else {
      peg$currPos = s3;
      s3 = peg$FAILED;
    }
    while (s3 !== peg$FAILED) {
      s2.push(s3);
      s3 = peg$currPos;
      s4 = peg$parseoption();
      if (s4 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 44) {
          s5 = peg$c0;
          peg$currPos++;
        } else {
          s5 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e0); }
        }
        if (s5 !== peg$FAILED) {
          peg$savedPos = s3;
          s3 = peg$f2(s4);
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
    }
    s3 = peg$currPos;
    s4 = peg$parseoption();
    if (s4 !== peg$FAILED) {
      if (input.charCodeAt(peg$currPos) === 59) {
        s5 = peg$c1;
        peg$currPos++;
      } else {
        s5 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e1); }
      }
      if (s5 !== peg$FAILED) {
        peg$savedPos = s3;
        s3 = peg$f3(s4);
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
    } else {
      peg$currPos = s3;
      s3 = peg$FAILED;
    }
    if (s3 !== peg$FAILED) {
      s2 = [s2, s3];
      s1 = s2;
    } else {
      peg$currPos = s1;
      s1 = peg$FAILED;
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$f4(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parseoption() {
    let s0, s1, s2, s3, s4, s5, s6, s7;
